--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./lib/d3.v5.min.js"></script>
     <script src="./lib/d3-dsv.min.js"></script>
     <script src="./lib/d3-simple-slider.min.js"></script>
+    <script src="./lib/d3-tip.min.js"></script>
     <script src="./lib/papaparse.min.js"></script>
     <script src="./lib/require.js"></script>
     <!-- <script src="./lib/jquery-csv.js"></script> -->
@@ -99,7 +100,7 @@
     <div id="map"></div>
 
     <div id = "t" class="row align-items-center">
-        <p id="t-Year">Slide to select a previous date:</p><div id="slider-year"></div>
+        <p id="t-Year">Slide to select a previous/future date:</p><div id="slider-year"></div>
     </div>
 
     <label for="hourSelect">Use hour period: </label>
